# faiss

./: .gitignore  CMakeLists.txt
demos/: CMakeLists.txt  bitmap.h  demo_sift1M.cpp  file_reader.h  gen_hybrid_data.cpp  hybrid_dataset.h  hybrid_optim.cpp  hybrid_query_plans.h  nsg_sub_graph.cpp  selectivity_estimation.h  sub_vs_all.cpp  test_acorn.cpp  test_histogram.cpp  test_kmeans.cpp  timer.h  work1_experiments.cpp  work2_cmp_histogram.cpp  work2_get_cost.cpp  work2_hybrid_optim.cpp  work2_plans_recall_cmp.cpp
faiss/: CMakeLists.txt  Index.h  IndexACORN.cpp  IndexACORN.h  IndexHNSW.cpp  IndexHNSW.h  IndexNSG.cpp  IndexNSG.h
faiss/impl/: ACORN.cpp  ACORN.h  AuxIndexStructures.h  FaissException.h  HNSW.cpp  HNSW.h
